NoRef * Updated DataTable - fixes horizontal scrollbar bug. * Fixed a table in orderList
git-svn-id: svn://data.ilscipio.com/ilscipio/ofbiz_foundation/trunk/themes/bootstrap@8837 55bbc10b-e964-4c8f-a844-a62c6f7d3c80

--- a/webapp/bootstrap/sb-admin/sb-admin.css
+++ b/webapp/bootstrap/sb-admin/sb-admin.css
@@ -273,7 +273,6 @@ ul.btn-group li{
 
 #login {
     margin: 4rem auto;
-    background-color: #fff;
 
 }
 
